--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Visitor Information System</title>
+	<title>JS Simple Search</title>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<link rel="icon" href="icon.png" type="image/png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
